Fixed Excl. tax location so it won't overflow

--- a/packages/scandipwa/src/component/CheckoutDeliveryOption/CheckoutDeliveryOption.style.scss
+++ b/packages/scandipwa/src/component/CheckoutDeliveryOption/CheckoutDeliveryOption.style.scss
@@ -73,20 +73,15 @@
         }
     }
 
-    &-Row {
-        strong {
-            display: inline-block;
-        }
+    &-Price {
+        display: inline-flex;
+        flex-direction: column;
     }
 
     &-SubPrice {
+        min-width: 100%;
         font-size: 12px;
         font-weight: 400;
-        text-align: end;
-        position: absolute;
-        inset-inline-start: 0;
-        inset-block-start: 1.5em;
-        white-space: nowrap;
     }
 
     &-Message {
